#13 Add theme_color to webpack

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Audio App</title>
 
-  <!-- <link rel="manifest" href="/manifest.json"> -->
-  <meta name="theme-color" content="#2F3BA2">
-
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Audio App">
-  <link rel="apple-touch-icon" href="/images/icons/icon-152x152.png">
+  <link rel="apple-touch-icon" href="/images/icons/icon.png">
 
   <meta name="description" content="A simple audio app">
 </head>
