--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,13 @@
   <meta name="description" content="A simple audio app">
 </head>
 <body>
-  <header class="header">
+  <!-- <header class="header">
     <nav class="nav">
       <a href="/">Fabrício Silva</a>
       |
       <a href="/projects">Projects</a>
     </nav>
-  </header>
+  </header> -->
 
   <div class="form-group">
     <label for="audioURL">Audio URL</label>
@@ -58,7 +58,7 @@
   </div> -->
 
   <footer class="footer">
-    <small>© Fabrício Silva, <time data-current-year></time></small>
+    <small class="copy">Made with <span class="icon icon-heart">❤</span> by <a href="https://fabriciofmsilva.com.br/">Fabrício Silva</a></small>
   </footer>
 </body>
 </html>
