--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Audio App</title>
+  <title>Web Audio Player App</title>
+  <meta name="description" content="A simple web audio player app">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Audio App">
-  <link rel="apple-touch-icon" href="/images/icons/icon.png">
 
-  <meta name="description" content="A simple audio app">
+  <link rel="apple-touch-icon" href="/images/icons/icon.png">
 </head>
 <body>
-  <!-- <header class="header">
-    <nav class="nav">
-      <a href="/">Fabrício Silva</a>
-      |
-      <a href="/projects">Projects</a>
-    </nav>
-  </header> -->
+  <header class="header">
+    <h1 class="brand">Web Audio Player</h1>
+  </header>
 
   <div class="form-group">
     <label for="audioURL">Audio URL</label>
