--- a/src/index.html
+++ b/src/index.html
@@ -39,19 +39,18 @@
     <button class="button" data-action="play">Play 2x</button>
   </div>
   
-  <!-- <div class="ads">
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
-    <!-- fabriciofmsilva_audio -->
-    <!-- <ins class="adsbygoogle"
+  <div class="ads">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <ins class="adsbygoogle"
       style="display:block"
       data-ad-client="ca-pub-2890790373732091"
-      data-ad-slot="2887652525"
+      data-ad-slot="1518455482"
       data-ad-format="auto"
       data-full-width-responsive="true"></ins>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
-  </div> -->
+  </div>
 
   <footer class="footer">
     <small class="copy">Made with <span class="icon icon-heart">❤</span> by <a href="https://fabriciofmsilva.com.br/">Fabrício Silva</a></small>
